Chap 13 & Chap 14 Proofread

--- a/RobotDynamics.ipynb
+++ b/RobotDynamics.ipynb
@@ -89,7 +89,7 @@
     "With $K(q,\\dot{q}) = K_1(q,\\dot{q}) + K_2(q,\\dot{q})$ we first calculate\n",
     "the term $\\frac{\\partial K}{\\partial \\dot{q}}$:\n",
     "$$\\frac{\\partial K}{\\partial \\dot{q}} = \\begin{bmatrix}{\\frac{\\partial K}{\\partial \\dot{\\theta}}}\\\\{\\frac{\\partial K}{\\partial \\dot{r}}}\\end{bmatrix} = \n",
-    "\\ColVecTwo{\\dot{\\theta}(H_1 + m_1\\|c_1^L\\|^2 + H_2 + m_2 r^2)}{m_2 \\dot{r}}.$$\n",
+    "\\begin{bmatrix}{\\dot{\\theta}(H_1 + m_1\\|c_1^L\\|^2 + H_2 + m_2 r^2)}\\\\{m_2 \\dot{r}}\\end{bmatrix}.$$\n",
     "Now, let us define the constant $\\bar{H} = H_1 + m_1\\|c_1^L\\|^2 + H_2$,\n",
     "and take the derivative with respect to time to obtain the term\n",
     "$\\frac{d}{dt}(\\frac{\\partial K}{\\partial \\dot{q}})$ in the Lagrangian:\n",
@@ -99,11 +99,11 @@
     "\n",
     "Proceeding to the $\\frac{\\partial K}{\\partial q}$ term, we see no\n",
     "dependence of $K_1$ on $q$, but a dependence of $K_2$ on $r$ to obtain\n",
-    "$$\\frac{\\partial K}{\\partial q} = \\ColVecTwo{0}{m_2 \\dot{\\theta}^2 r}.$$\n",
+    "$$\\frac{\\partial K}{\\partial q} = \\begin{bmatrix}{0}\\\\{m_2 \\dot{\\theta}^2 r}\\end{bmatrix}.$$\n",
     "\n",
     "The last term in the Lagrangian dynamics equation is the derivative of\n",
     "potential energy $P(q) = mgh = mgr\\sin \\theta$:\n",
-    "$$\\frac{\\partial P}{\\partial q} = mg \\ColVecTwo{r \\cos \\theta}{\\sin \\theta}.$$\n",
+    "$$\\frac{\\partial P}{\\partial q} = mg \\begin{bmatrix}{r \\cos \\theta}\\\\{\\sin \\theta}\\end{bmatrix}.$$\n",
     "Overall, we have the dynamic equations: $$\\begin{aligned}\n",
     "(\\bar{h}+m_2 r^2)\\ddot{\\theta} + 2 \\dot{r}\\dot{\\theta} m_2 r + m g r \\cos \\theta &= u_1 \\\\\n",
     "m_2 \\ddot{r} - m_2 \\dot{\\theta}^2 r + mg \\sin \\theta &= u_2 \n",
@@ -112,11 +112,11 @@
     "\n",
     "Let us now determine the standard form of the dynamics. First, we can\n",
     "determine the $B$ matrix by matching terms that depend on $\\ddot{q}$:\n",
-    "$$B(q)\\ddot{q} = \\ColVecTwo{\\ddot{\\theta}(\\bar{H}+m_2r^2)}{m_2 \\ddot{r}} = \\MatTwo{\\bar{H}+m_2r^2}{0}{0}{m_2} \\ddot{q}.$$\n",
+    "$$B(q)\\ddot{q} = \\begin{bmatrix}{\\ddot{\\theta}(\\bar{H}+m_2r^2)}\\\\{m_2 \\ddot{r}}\\end{bmatrix} = \\begin{bmatrix}{\\bar{H}+m_2r^2}&{0}\\\\{0}&{m_2} \\end{bmatrix}\\ddot{q}.$$\n",
     "The velocity-dependent terms go into $C$:\n",
-    "$$C(q,\\dot{q}) = \\ColVecTwo{2 m_2 r \\dot{r} \\dot{\\theta}}{-m_2 r \\dot{\\theta}^2}$$\n",
+    "$$C(q,\\dot{q}) = \\begin{bmatrix}{2 m_2 r \\dot{r} \\dot{\\theta}}\\\\{-m_2 r \\dot{\\theta}^2}\\end{bmatrix}$$\n",
     "Finally, the generalized gravity vector $G$ contains all other terms:\n",
-    "$$G(q) = mg \\ColVecTwo{r \\cos \\theta}{\\sin \\theta}.$$\n",
+    "$$G(q) = mg \\begin{bmatrix}{r \\cos \\theta}\\\\{\\sin \\theta}\\end{bmatrix}.$$\n",
     "\n",
     "### Effective inertia \n",
     "\n",
@@ -124,12 +124,12 @@
     "and workspace dynamics. This concept of effective inertial lets us\n",
     "answer questions like or \"How much force would the robot apply to an\n",
     "object at point $p$?\" or \"How much external force is needed to\n",
-    "accelerate a point $p$ on the robot at a given rate?\"\n",
+    "accelerate a point $p$ on the robot at a given rate?\".\n",
     "\n",
     "Let us assume that without any external force, at the robot's current\n",
-    "state $(q,\\dot{q})$ and external torques $u_0$ it generates\n",
+    "state $(q,\\dot{q})$ and external torques $u_0$ generates\n",
     "accelerations $\\ddot{q}_{0}$:\n",
-    "$$\\ddot{q}_0 = B^{-1}(q)( u - C(q,\\dot{q}) - G(q))$$ We now wish to\n",
+    "$$\\ddot{q}_0 = B^{-1}(q)( u_{0} - C(q,\\dot{q}) - G(q))$$ We now wish to\n",
     "calculate what accelerations $\\ddot{q}$ would occur a force $f$ were\n",
     "applied at this point in time at point $p$. Supposing $J(q)$ is the\n",
     "Jacobian of $p$, the external torques become $u = u_0  + J^T(q)f$.\n",
@@ -144,7 +144,7 @@
     "un-forced acceleration of $p$\n",
     "$$\\ddot{p}_0 = \\dot{J}(q)\\dot{q} + J(q)\\ddot{q}_0$$ we have\n",
     "$$\\ddot{p} - \\ddot{p}_0 = J(q)\\ddot{q} - J(q)\\ddot{q}_0 = J(q)B^{-1}(q)J^T(q)f.$$\n",
-    "Another way of saying this, which matches the form of Newton's first law\n",
+    "Another way of saying this, which matches the form of Newton's second law\n",
     "$f=ma$, is $$f = (J(q)B^{-1}(q)J^T(q))^{-1}(\\ddot{p} - \\ddot{p}_0).$$\n",
     "Hence, the matrix $(J(q)B^{-1}(q)J^T(q))^{-1}$ is known as the\n",
     "*effective inertia matrix* at point $p$.\n",
@@ -154,7 +154,7 @@
     "rank, singularities in $J$ may cause $J(q)B^{-1}(q)J^T(q)$ to drop rank,\n",
     "making it non-invertible. The ultimate effect is that in some\n",
     "directions, there may be no force that can accelerate the robot.\n",
-    "Similarity, if the manipulability of the Jacobian is small, a huge force\n",
+    "Similarly, if the manipulability of the Jacobian is small, a huge force\n",
     "may be needed to cause a small acceleration.\n",
     "\n",
     "In some cases this can be dangerous, such as when robots handle delicate\n",
@@ -216,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
