--- a/WhatAreDynamicsAndControl.ipynb
+++ b/WhatAreDynamicsAndControl.ipynb
@@ -83,7 +83,7 @@
     "time*. If we need to explicitly represent the dependence on time we\n",
     "shall write $x(t)$ and $u(t)$. Hence, the dot notation is simply the\n",
     "time derivative $\\dot{x} = \\frac{d}{dt}x$. (Or more explicitly,\n",
-    "$\\dot{x}(t) = \\frac{dx}{dt}(t)$). Also note that from this chapter\n",
+    "$\\dot{x}(t) = \\frac{d}{dt}x(t)$.) Also note that from this chapter\n",
     "onward, all variables except for time will be vector quantities unless\n",
     "stated otherwise.\n",
     "\n",
@@ -94,8 +94,8 @@
     "\"dynamical system\" it means that the system regards a dynamic quantity\n",
     "(the state) but the system itself is not changing over time. We shall\n",
     "also sometimes say \"dynamic equation\" which is a synonym with \"dynamics\n",
-    "equation\" and is chosen according to author preference. But why don't we\n",
-    "call it a \"dynamical equation?\" Let's just move on, and let the grammar\n",
+    "equation\" and is chosen according to author's preference. But why don't we\n",
+    "call it a \"dynamical equation\"? Let's just move on, and let the grammar\n",
     "Nazis squabble over terminology\\...\n",
     "\n",
     "### Open-loop and closed-loop control\n",
@@ -105,7 +105,7 @@
     "controls: 1) *open-loop* control, in which case $u \\equiv u(t)$ only\n",
     "depends on time, and 2) closed-loop control, in which case\n",
     "$u \\equiv u(x)$ depends on state. (It may also depend on time, in which\n",
-    "case we write $u \\equiv u(x,t)$).\n",
+    "case we write $u \\equiv u(x,t)$.)\n",
     "\n",
     "The significance of closed-loop control is that the control function can\n",
     "\"observe\" the state of the system and change accordingly in order to\n",
@@ -168,9 +168,9 @@
     "\n",
     "The simplest numerical integration technique is known as **Euler's method**, which divides time into a sequence of small steps of $\\Delta t$ in which the dynamics are assumed constant.  Each subsequent movement simply displaces the state by the first-order approximation $\\Delta t g(x(t),t)$.  What emerges is a sequence of states $x_0,\\ldots,x_N$ given by:\n",
     "\n",
-    "$$x_1 = x_0 + \\Delta t \\cdot g(x_0,t)$$\n",
+    "$$x_1 = x_0 + \\Delta t \\cdot g(x_0,\\Delta t\\cdot 0)$$\n",
     "\n",
-    "$$x_2 = x_1 + \\Delta t \\cdot g(x_1,t)$$\n",
+    "$$x_2 = x_1 + \\Delta t \\cdot g(x_1,\\Delta t\\cdot 1)$$\n",
     "\n",
     "$$...$$\n",
     "\n",
@@ -285,12 +285,12 @@
    "source": [
     "Note that the accuracy of the integration depends heavily on the timestep chosen.  In general, the smaller\n",
     "the timestep, the more accurate the integration will be.  More formally, define the *integration error*\n",
-    "as $\\epsilon(t) = x(t) - x_{\\lfloor t/Delta t\\rfloor}$. \n",
+    "as $\\epsilon(t) = x(t) - x_{\\lfloor t/ \\Delta t\\rfloor}$. \n",
     "Higher errors result as\n",
     "\n",
     "* The spatial variation of the dynamics function is large.  More precisely, the error will grow if the Jacobian of f (in either x or u) are large.\n",
     "\n",
-    "* The time $t$ is large (i.e., the error generally gets worse over time.)\n",
+    "* The time $t$ is large (i.e., the error generally gets worse over time).\n",
     "\n",
     "* $\\Delta t$ is large.\n",
     "\n",
@@ -620,7 +620,7 @@
     "drive it monotonically to the goal\n",
     "([Fig. 1](#fig:PendulumStrongMotor)). But if the maximum torque is\n",
     "lowered beyond some amount, the motor can no longer achieve sufficient\n",
-    "inertia to raise the pendulum without \"pumping,\" like a child on a\n",
+    "inertia to raise the pendulum without \"pumping\", like a child on a\n",
     "swing, to increase the kinetic energy of the system. As we shall see when we discuss [bang-bang control](OptimalControl.ipynb), the optimal controller will then\n",
     "alternate between extreme controls to build up enough kinetic energy to\n",
     "reach the goal. This implies that the time evolution of the system will\n",
@@ -653,7 +653,7 @@
     "\n",
     "************\n",
     "\n",
-    "![fig:Cartpole](figures/control/cartpole.svg)\n",
+    "![fig:Cartpole](figures/control/cartpole_1.svg)\n",
     "\n",
     "<div class=\"figcaption\"><a name=\"fig:Cartpole\">Figure 3.</a>\n",
     "    Illustration of the cart-pole problem.\n",
@@ -758,7 +758,7 @@
     "time-invariant* (LTI) system. In an LTI system, the dynamics equation\n",
     "takes on the form $$\\dot{x} = Ax + Bu$$ where $A$ and $B$ are constant\n",
     "matrices of size $n \\times n$ and $n \\times m$, respectively. This type\n",
-    "of system is easily analyzed using results from linear algebra can\n",
+    "of system is easily analyzed using results from linear algebra and can\n",
     "represent a wide range of dynamic behavior.\n",
     "\n",
     "For example, the 1D point\n",
@@ -787,8 +787,8 @@
     "\\dot{x} & = \\dot {\\Delta x} = (f(x_0)+g(x_0) u_0) + \\left(\\frac{\\partial f}{\\partial x}(x_0) + \\frac{\\partial g}{\\partial x}(x_0)u_0\\right) \\Delta x + g(x_0) \\Delta u \\\\\n",
     " & = \\left(\\frac{\\partial f}{\\partial x}(x_0) + \\frac{\\partial g}{\\partial x}(x_0)u_0\\right) \\Delta x + g(x_0) \\Delta u \n",
     "\\end{aligned}$$ This is LTI in $(\\Delta x,\\Delta u)$ with\n",
-    "$A=\\frac{\\partial f}{\\partial x}(x_0) + \\frac{\\partial g}{\\partial x}(x_0)$\n",
-    "and $B=\\frac{\\partial g}{\\partial x}(x_0)$.\n"
+    "$A=\\frac{\\partial f}{\\partial x}(x_0) + \\frac{\\partial g}{\\partial x}(x_0)u_0$\n",
+    "and $B=g(x_0)$.\n"
    ]
   },
   {
@@ -972,8 +972,7 @@
     "\n",
     "* Continuous-time dynamic systems are represented by a dynamics equation in the canonical form $\\dot{x}(t) = f(x(t),u(t))$, where $x$ is the state trajectory and $u$ is the control trajectory.  Discrete-time systems are represented by the form $x_{t+1} = f(x_t,u_t)$.\n",
     "* Integration (or simulation) is needed to determine the trajectory that the state will follow under a given control.  Numerical instability can result with a time step that is too large.\n",
-    "* Dynamic systems can be convergent, stable, or divergent under a given controller.\n",
-    "* "
+    "* Dynamic systems can be convergent, stable, or divergent under a given controller."
    ]
   },
   {
@@ -1008,7 +1007,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
