--- a/Control.ipynb
+++ b/Control.ipynb
@@ -151,10 +151,10 @@
     "which drives the system faster toward 0. Stiffer systems can be more\n",
     "precise than softer ones. However, stiffer systems can sometimes:\n",
     "\n",
-    "-   Overshoot a desired setpoint if not tuned correctly,\n",
+    "-   Overshoot a desired setpoint if not tuned correctly.\n",
     "\n",
     "-   Go unstable when used with a discrete-time controller with large\n",
-    "    time step\n",
+    "    time step.\n",
     "\n",
     "-   Generate extreme controls, which may cause motor damage, loss of\n",
     "    comfort in vehicles, and may be more dangerous to humans and objects\n",
@@ -828,7 +828,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
