--- a/RobotControl.ipynb
+++ b/RobotControl.ipynb
@@ -138,7 +138,7 @@
     "First, discontinuities in $q_D(t)$ should be forbidden since the robot\n",
     "will accelerate quickly, and possibly overshoot the target. Similarly,\n",
     "discontinuities in $\\dot{q}_D(t)$ should be avoided if possible, because\n",
-    "exact tracking would require instantaneous acceleration. Naïvely\n",
+    "exact tracking would require instantaneous acceleration. Naively\n",
     "requesting sudden changes of velocity runs the risk of overheating\n",
     "motors and overshooting setpoints.\n",
     "\n",
@@ -321,7 +321,7 @@
     "$$v^\\star(t_f) = \\frac{3}{2}(\\theta_g-\\theta_s)/t_f.$$ The acceleration\n",
     "is $$\\ddot{\\theta}(t) = 6(\\theta_g-\\theta_s)(1/t_f^2 - 2t/t_f^3)$$ which\n",
     "has maximum absolute value at the endpoints. Hence, the maximum\n",
-    "acceleration along the curve is is\n",
+    "acceleration along the curve is\n",
     "$$a^\\star(t_f) = 6(\\theta_g-\\theta_s)/t_f^2.$$ It is then a simple\n",
     "matter to determine whether the curve is acceleration limited or\n",
     "velocity limited, and then to set $t_f$ appropriately.\n",
@@ -518,7 +518,7 @@
     "accounts for inertial and Coriolis effects during movement. Supposing we\n",
     "have a desired acceleration $\\ddot{q}_D$. If we use inverse dynamics to\n",
     "calculate the necessary torque needed to guide the robot upon this\n",
-    "acceleration: $$\\tau_{ID}(\\ddot{q}) = B(q) \\ddot{q} + C(q,q\\dot) + G(q)\n",
+    "acceleration: $$\\tau_{ID}(\\ddot{q}) = B(q) \\ddot{q} + C(q,\\dot q) + G(q)\n",
     "\\label{eq:InverseDynamics}$$ then feeding this torque to the robot will\n",
     "generate the desired acceleration, assuming no disturbances and modeling\n",
     "errors. There are generally two methods for compensating for error. The\n",
@@ -675,8 +675,8 @@
     "gravity, inertial forces due to end-effector acceleration, and noise, 2)\n",
     "it is not clear how much to increase or reduce $x$ to obtain a desired\n",
     "change in force, and 3) those changes in $x$ need to be converted into\n",
-    "joint-level commands. Operational control handles issue 3, but not 1 or\n",
-    "2. To extract the external forces from the sensed forces, the operation\n",
+    "joint-level commands. Operational control handles issue 3, but not 1 or 2.\n",
+    "To extract the external forces from the sensed forces, the operation\n",
     "of a force sensor should be modeled in detail. Accelerations will be\n",
     "observed as force spikes in the sensed force signal, and changes in the\n",
     "end effector orientation will be observed as a bias in the force signal:\n",
@@ -709,14 +709,14 @@
     "($\\ref{eq:MassSpringDamper}$) can be used in conjunction with\n",
     "($\\ref{eq:ForceSensor}$) to estimate $f_{ext}$, and the resulting\n",
     "$\\ddot{x}$ should be fed into an operational space controller as\n",
-    "$\\ddot{x}_cmd$.\n",
+    "$\\ddot{x}_{cmd}$.\n",
     "\n",
     "An implementer of such systems should be aware that it is difficult to\n",
     "simulate a low-mass MSD with a high-mass robot, since the accelerations\n",
     "encountered by the mass in response to an applied force may exceed the\n",
     "limits of the robot's torques. The range of accelerations that a robot\n",
     "can perform is also known as its *control bandwidth*. Lighter robots,\n",
-    "with with stronger motors, and with low mass near the end effector tend\n",
+    "with stronger motors, and with low mass near the end effector tend\n",
     "to have larger control bandwidth than heavy ones."
    ]
   },
@@ -824,7 +824,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
