Chap 17 typo fix

--- a/OptimalControl.ipynb
+++ b/OptimalControl.ipynb
@@ -32,7 +32,7 @@
     "control allows a control designer to specify the *dynamic model* and the\n",
     "*desired outcomes*, and the algorithm will compute an optimized control.\n",
     "This relieves some burden by letting the designer reason at the level of\n",
-    "*what* the robot should do, rather than designing *how* it should do.\n",
+    "*what* the robot should do, rather than designing *how* it should do it.\n",
     "\n",
     "In this chapter, we will discuss how to specify optimal control problems\n",
     "and how to implement and use optimal control techniques. We will\n",
@@ -670,7 +670,7 @@
     "Due to all of these variables, MPC is difficult to analyze, and as\n",
     "employed in practice it usually does not satisfy many theoretical\n",
     "stability / convergence properties. However, with careful tuning, MPC\n",
-    "can an extremely high performing and practical nonlinear optimal control\n",
+    "can be an extremely high performing and practical nonlinear optimal control\n",
     "technique.\n"
    ]
   },
